tests/compile/transaction_invariant.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile/transaction_invariant.rs:15:20
   |
13 |     let txn = client.transaction(&db);
   |         --- `txn` declared here, outside of the closure body
14 |     let name = txn.query(|rows| {
   |                           ---- `rows` is a reference that is only valid in the closure body
15 |         let item = MyTable::join(rows);
   |                    ^^^^^^^^^^^^^^^^^^^ `rows` escapes the closure body here
   |
   = note: requirement occurs because of a mutable reference to `Rows<'_, v0::Schema>`
   = note: mutable references are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
